syntax = "proto3";

package authpb;

option go_package = "/authpb";

service Service {
    rpc SignIn(SignInRequest) returns (SignInResponse) {}
    rpc SignUp(SignUpRequest) returns (SignUpResponse){}
}

message SignInRequest{
    string number = 1;
    string password = 2;
}

message SignInResponse{
    string token = 1;
}


message SignUpRequest{
    string number = 1;
    string password = 2;
    string name = 3;
    string lastname = 4;
}

message SignUpResponse{
}



