syntax = "proto3";

package identifierpb;

option go_package = "/identifierpb";

  
service Service {
    rpc Hash(HashRequest) returns (HashResponse) {}
    rpc JwtGen(JwtGenRequest) returns (JwtGenResponse){}
    rpc JwtParse(JwtParseRequest) returns (JwtParseResponse){}
}

message JwtParseRequest {
    string token = 1;
}

message JwtParseResponse {
    string subject = 1;
}


message JwtGenRequest {
    string subject = 1;
    int64 time = 2;
}

message JwtGenResponse {
    string token = 1;
}


message HashRequest {
    string str = 1;
}

message HashResponse {
    string hash = 1;
}