syntax = "proto3";

package userspb;

option go_package = "/userspb";

  
service Service {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUserAuth(GetUserAuthRequest) returns (GetUserAuthResponse){}
    rpc GetUserId(GetUserIdRequest) returns (GetUserIdResponse){}

}


message GetUserIdRequest{
    int64 id_users = 1;
}

message GetUserIdResponse{
    int64 id_users = 1;
    string number = 2;
    string password = 3;
    string name = 4;
    string lastname = 5;
 
}



message GetUserAuthRequest {
    string number = 1;
    string password = 2;
}

message GetUserAuthResponse {
    int64 id_users = 1;
}

  
message CreateUserRequest {
    string number = 1;
    string password = 2;
    string name = 3;
    string lastname = 4;
}

message CreateUserResponse {
}